--- a/Text/diploma.bib
+++ b/Text/diploma.bib
@@ -37,7 +37,16 @@
   organization={IEEE}
 }
 
-@article{Ovelgoenne&Geyer-Schulz:2012,
+@incollection{Ovelgoenne&Geyer-Schulz:2012a,
+  title={A comparison of agglomerative hierarchical algorithms for modularity clustering},
+  author={Ovelg{\"o}nne, Michael and Geyer-Schulz, Andreas},
+  booktitle={Challenges at the Interface of Data Analysis, Computer Science, and Optimization},
+  pages={225--232},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{Ovelgoenne&Geyer-Schulz:2012b,
   title={An ensemble learning strategy for graph clustering.},
   author={Ovelg{\"o}nne, Michael and Geyer-Schulz, Andreas},
   journal={Graph Partitioning and Graph Clustering},
@@ -58,32 +67,22 @@
 }
 
 @article{Robbins&Monro:1951,
-  added-at = {2008-10-07T16:03:39.000+0200},
-  author = {Robbins, H. and Monro, S.},
-  biburl = {http://www.bibsonomy.org/bibtex/2cc1b9aa8927ac4952e93f34094a3eaaf/brefeld},
-  interhash = {93d54534a08c30eda9e34d1def03ffa3},
-  intrahash = {cc1b9aa8927ac4952e93f34094a3eaaf},
-  journal = {Annals of Mathematical Statistics},
-  keywords = {imported},
-  pages = {400-407},
-  timestamp = {2008-10-07T16:03:40.000+0200},
-  title = {A stochastic approximation method},
-  volume = 22,
-  year = 1951
+  title={A stochastic approximation method},
+  author={Robbins, Herbert and Monro, Sutton},
+  journal={The annals of mathematical statistics},
+  pages={400--407},
+  year={1951},
+  publisher={JSTOR}
 }
 
-@ARTICLE{Granichin&Amelina:2014,
-	author={Granichin, O. and Amelina, N.}, 
-	journal={Automatic Control, IEEE Transactions on}, 
-	title={Simultaneous Perturbation Stochastic Approximation for Tracking under Unknown but Bounded Disturbances}, 
-	year={2014}, 
-	month={}, 
-	volume={PP}, 
-	number={99}, 
-	pages={1-1}, 
-	keywords={Approximation algorithms;Approximation methods;Estimation;Heuristic algorithms;Noise;Optimization;Vectors;SPSA;Stochastic approximation;arbitrary noise;randomized algorithm;unknown but bounded disturbances}, 
-	doi={10.1109/TAC.2014.2359711}, 
-	ISSN={0018-9286}
+@article{Granichin&Amelina:2015,
+  title={Simultaneous Perturbation Stochastic Approximation for Tracking under Unknown but Bounded Disturbances},
+  author={Granichin, Oleg and Amelina, Natalia},
+  journal={IEEE Transactions on Automatic Control},
+  volume={60},
+  number={5},
+  year={2015},
+  issue={5},
 }
 
 @article{Kiefer&Wolfowitz:1952,
@@ -104,16 +103,6 @@
   pages={737--744},
   year={1954},
   publisher={JSTOR}
-}
-
-@article{Euler:1736,
-  title={Methodus universalis series summandi ulterius promota},
-  author={Euler, Leonhard},
-  journal={Commentarii academiae scientiarum Petropolitanae},
-  volume={8},
-  number={1736},
-  pages={147--158},
-  year={1736}
 }
 
 @inproceedings{Faloutsos&al:1999,
@@ -194,4 +183,48 @@
   volume={8},
   year={1994},
   publisher={Cambridge university press}
+}
+
+@article{Brandes&al:2008,
+  title={On modularity clustering},
+  author={Brandes, Ulrik and Delling, Daniel and Gaertler, Marco and Gorke, Robert and Hoefer, Martin and Nikoloski, Zoran and Wagner, Dorothea},
+  journal={Knowledge and Data Engineering, IEEE Transactions on},
+  volume={20},
+  number={2},
+  pages={172--188},
+  year={2008},
+  publisher={IEEE}
+}
+
+@article{Fortunato&Barthelemy:2007,
+  title={Resolution limit in community detection},
+  author={Fortunato, Santo and Barth{\'e}lemy, Marc},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={104},
+  number={1},
+  pages={36--41},
+  year={2007},
+  publisher={National Acad Sciences}
+}
+
+@article{Muff&Rao&Caflisch:2005,
+  title={Local modularity measure for network clusterizations},
+  author={Muff, Stefanie and Rao, Francesco and Caflisch, Amedeo},
+  journal={arXiv preprint cond-mat/0503252},
+  year={2005}
+}
+
+@book{Spall:2005,
+  title={Introduction to stochastic search and optimization: estimation, simulation, and control},
+  author={Spall, James C.},
+  volume={65},
+  year={2005},
+  publisher={John Wiley \& Sons}
+}
+
+@book{Polyak:1987,
+  title={Introduction to optimization},
+  author={Polyak, Boris T.},
+  year={1987},
+  publisher={Optimization Software New York}
 }
