--- a/Text/diploma.bib
+++ b/Text/diploma.bib
@@ -228,3 +228,147 @@
   year={1987},
   publisher={Optimization Software New York}
 }
+
+@article{Zachary:1977,
+  title={An information flow model for conflict and fission in small groups},
+  author={Zachary, Wayne W},
+  journal={Journal of anthropological research},
+  pages={452--473},
+  year={1977},
+  publisher={JSTOR}
+}
+
+@article{Lusseau&al:2003,
+  title={The bottlenose dolphin community of Doubtful Sound features a large proportion of long-lasting associations},
+  author={Lusseau, David and Schneider, Karsten and Boisseau, Oliver J and Haase, Patti and Slooten, Elisabeth and Dawson, Steve M},
+  journal={Behavioral Ecology and Sociobiology},
+  volume={54},
+  number={4},
+  pages={396--405},
+  year={2003},
+  publisher={Springer}
+}
+
+@article{Baird&Ulanowicz:1989,
+  title={The seasonal dynamics of the {Chesapeake Bay} ecosystem},
+  author={Baird, Daniel and Ulanowicz, Robert E},
+  journal={Ecological Monographs},
+  pages={329--364},
+  year={1989},
+  publisher={JSTOR}
+}
+
+@article{Newman:2006,
+  title={Finding community structure in networks using the eigenvectors of matrices},
+  author={Newman, Mark EJ},
+  journal={Physical review E},
+  volume={74},
+  number={3},
+  pages={036104},
+  year={2006},
+  publisher={APS}
+}
+
+@article{Girvan&Newman:2002,
+  title={Community structure in social and biological networks},
+  author={Girvan, Michelle and Newman, Mark EJ},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={12},
+  pages={7821--7826},
+  year={2002},
+  publisher={National Acad Sciences}
+}
+
+@article{Duch&Arenas:2005,
+  title={Community detection in complex networks using extremal optimization},
+  author={Duch, Jordi and Arenas, Alex},
+  journal={Physical review E},
+  volume={72},
+  number={2},
+  pages={027104},
+  year={2005},
+  publisher={APS}
+}
+
+@article{Gleiser&Danon:2003,
+  title={Community structure in jazz},
+  author={Gleiser, Pablo M. and Danon, Leon},
+  journal={Advances in complex systems},
+  volume={6},
+  number={04},
+  pages={565--573},
+  year={2003},
+  publisher={World Scientific}
+}
+
+@article{Guimera&al:2003,
+  title={Self-similar community structure in a network of human interactions},
+  author={Guimer{\`a} Manrique, Roger and Danon, L and D{\'\i}az Guilera, Albert and Giralt, Francesc and Arenas, {\`A}lex},
+  journal={Physical Review E, 2003, vol. 68, n{\'u}m. 6, p. 065103-1-065103-4},
+  year={2003},
+  publisher={The American Physical Society}
+}
+
+@inproceedings{Adamic&Glance:2005,
+  title={The political blogosphere and the 2004 {US} election: divided they blog},
+  author={Adamic, Lada A and Glance, Natalie},
+  booktitle={Proceedings of the 3rd international workshop on Link discovery},
+  pages={36--43},
+  year={2005},
+  organization={ACM}
+}
+
+@article{Boguna&al:2004,
+  title = {Models of social networks based on social distance attachment},
+  author = {Bogu\~n\'a, Mari\'an and Pastor-Satorras, Romualdo and D\'iaz-Guilera, Albert and Arenas, Alex},
+  journal = {Phys. Rev. E},
+  volume = {70},
+  issue = {5},
+  pages = {056122},
+  numpages = {8},
+  year = {2004},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevE.70.056122},
+  url = {http://link.aps.org/doi/10.1103/PhysRevE.70.056122}
+}
+
+@article{Newman:2001,
+  title={The structure of scientific collaboration networks},
+  author={Newman, Mark EJ},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={98},
+  number={2},
+  pages={404--409},
+  year={2001},
+  publisher={National Acad Sciences}
+}
+
+@inproceedings{Boldi&Vigna:2004,
+	author ="Paolo Boldi and Sebastiano Vigna",
+	title = "The {W}eb{G}raph Framework {I}: {C}ompression Techniques",
+	year = 2004,
+	booktitle="Proc. of the Thirteenth International World Wide Web Conference (WWW 2004)",
+	address="Manhattan, USA",
+	pages="595--601",
+	publisher="ACM Press"
+}
+
+@inproceedings{Boldi&al:2011,
+	author = "Paolo Boldi and Marco Rosa and Massimo Santini and Sebastiano Vigna",
+	title = "Layered Label Propagation: A MultiResolution Coordinate-Free Ordering for Compressing Social Networks",
+	booktitle="Proceedings of the 20th international conference on World Wide Web",
+	year = 2011,
+	publisher="ACM Press"
+}
+
+@article{Boldi&al:2004,
+	author="Paolo Boldi and Bruno Codenotti and Massimo Santini and Sebastiano Vigna",
+	title="UbiCrawler: A Scalable Fully Distributed Web Crawler",
+	journal="Software: Practice \& Experience",
+	year=2004,
+	volume=34,
+	number=8,
+	pages="711--726"
+} 
