--- a/Text/diploma.tex
+++ b/Text/diploma.tex
@@ -67,8 +67,9 @@
 \maketitle
 \tableofcontents
 
-% \input{section1}
-\input{section2}
+% \input{section1/section1}
+% \input{section2/section2.I}
+\input{section2/section2.II}
 
 \bibliographystyle{unsrt}
 \bibliography{diploma}
